Tao trang cap nhat lien he

--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "jquery": "^3.7.1",
     "popper.js": "^1.16.1",
     "solid-bootstrap": "^1.0.19",
+    "vee-validate": "^4.12.6",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
